--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -1,1 +1,18 @@
 @import '~bootstrap/scss/bootstrap';
+$primary: #333d29;
+$secondary: #b6ad90;
+
+
+body
+ {
+   background-color: green;
+ }
+
+ .box {
+   align-items: center;
+   background-color: lightgray;
+   border: 5px solid black;
+   display: flex;
+   height: 100px;
+   justify-content: center;
+ }
