--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -2,17 +2,83 @@
 $primary: #333d29;
 $secondary: #b6ad90;
 
+.container {
+  height: 100vh;
+}
 
-body
- {
-   background-color: green;
- }
+.board {
+  margin: auto;
+  max-width: calc(100vh - 75px);
+  max-height: calc(100vh - 75px);
 
- .box {
-   align-items: center;
-   background-color: lightgray;
-   border: 5px solid black;
-   display: flex;
-   height: 100px;
-   justify-content: center;
- }
+  background: url('https://i.imgur.com/80wFjUd.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.box {
+  border-right: 1px solid black;
+  border-bottom: 1px solid black;
+
+  &:nth-child(3n) {
+    border-right: 0;
+  }
+
+  &:nth-last-child(-1n + 3) {
+    border-bottom: 0;
+  }
+
+  min-height: calc(100% / 3);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background-color: white;
+  color: white;
+  font-size: 20vh;
+  text-shadow: 4px 2px rgba(0, 0, 0, .25);
+
+  &:hover {
+    background: cyan;
+  }
+
+  user-select: none;
+}
+// body
+//  {
+//    background-color: green;
+//  }
+
+// //  .container {
+// //    width: 80vh;
+// //    display: flex;
+// //  }
+
+//  .box {
+//    align-items: center;
+//    background-color: lightgray;
+//    border: 5px solid black;
+//    display: flex;
+//    height: 80px;
+//    justify-content: center;
+//    padding: 50px;
+//  }
+
+// .row {
+//   display: flex;
+//   flex-direction: row;
+// }
+// // .box {
+// // border: 3px solid black;
+// // width: 80px;
+// // height: 80px;
+// // }
+
+// // .row {
+// //   display: flex-wrap;
+// //   // flex-wrap: wrap;
+// //   border: 3px solid black;
+// //   width: 345px;
+// //   height: 370px;
+// // }
