--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -2,6 +2,10 @@
 $primary: #333d29;
 $secondary: #b6ad90;
 
+#after-sign-in {
+  display: none;
+}
+
 .container {
   height: 100vh;
 }
@@ -15,6 +19,11 @@ $secondary: #b6ad90;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+}
+
+.new-game {
+  display: center;
+  align-items: center;
 }
 
 .box {
