--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -68,6 +68,31 @@ head {
   align-items: center;
 }
 
+.border {
+  display: flex;
+  justify-content: center;
+}
+
+.auth {
+  text-align: center;
+}
+
+#sign-out-button {
+  text-align: center;
+}
+
+#new-game-button {
+  text-align: center;
+}
+
+.text-success {
+  text-align: center;
+}
+
+.text-danger {
+  text-align: center;
+}
+
 h1, h4 {
   display: flex;
   justify-content: center;
@@ -77,7 +102,6 @@ h1, h4 {
 
 body {
   background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQq42GtTnjzHcVxgr3zQVaqXo4225p3xDsRGA&usqp=CAU');
-  background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
